testsuite/tests/typecheck/should_fail/T8428.stderr

T8428.hs:11:19: error:
    • Couldn't match type: (forall s. ST s) a
                     with: forall s. ST s a
      Expected: IdentityT (forall s. ST s) a -> forall s. ST s a
        Actual: IdentityT (forall s. ST s) a -> (forall s. ST s) a
    • In the second argument of ‘(.)’, namely ‘runIdentityT’
      In the expression: runST . runIdentityT
      In an equation for ‘runIdST’: runIdST = runST . runIdentityT
    • Relevant bindings include
        runIdST :: IdentityT (forall s. ST s) a -> a
          (bound at T8428.hs:11:1)
